--- a/viz/src/main/java/wiseViz/viz/package.html
+++ b/viz/src/main/java/wiseViz/viz/package.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
-    <title>eu.fronts.unified.viz package</title>
+    <title>wiseViz.viz package</title>
 </head>
 <body bgcolor="white">
 Package for the graphical interface of the FRONTS unified experiment.
