--- a/viz/src/main/java/wiseViz/viz/tasks/package.html
+++ b/viz/src/main/java/wiseViz/viz/tasks/package.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <head>
-    <title>eu.fronts.unified.viz.tasks package</title>
+    <title>wiseViz.viz.tasks package</title>
 </head>
 <body bgcolor="white">
 Package for tasks handling the recurring events of the processing main panel.
